# mcphub

./: .gitignore  README.md  config.example.json  predefined.json  pyproject.toml  run.bat  run.sh  stop.bat  stop.sh
mcp_hub/: __init__.py  __main__.py  api.py  config.py  formats.py  manager.py  predefined.py  proxy.py
mcp_hub/static/: index.html
