[project]
name = "mcp-hub"
version = "0.1.0"
description = "Lightweight MCP proxy with on/off web UI. Config-file only — no database."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.10",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.scripts]
mcp-hub = "mcp_hub.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_hub"]
